--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+generate_pdf:
+    path: /shipment/print/{id}
+    controller: App\Controller\PDFController::generatePdf
+
+
+
