--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=prod
-APP_SECRET=
+APP_SECRET=31f466dddafeaa0bb49a71a474e3212c
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
