--- a/.env
+++ b/.env
@@ -25,10 +25,13 @@ APP_SECRET=31f466dddafeaa0bb49a71a474e3212c
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:AAUyIjeuCAoJUUhGhUuajMPEJyoEbYtD@maglev.proxy.rlwy.net:33529/railway"
-DATABASE_URL="mysql://root@127.0.0.1:3306/admini?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://root@127.0.0.1:3306/admini?serverVersion=8.0.32&charset=utf8mb4"
 
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:rout@127.0.0.1:5432/logistic?serverVersion=16&charset=utf8"
+#DATABASE_URL="postgresql://root:13207@127.0.0.1:5432/admini?serverVersion=17&charset=utf8"
+
+DATABASE_URL="postgresql://root:root@database:5433/admini?serverVersion=15&charset=utf8"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -46,3 +49,5 @@ MAILER_DSN=smtp://localhost:1025
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+# Ensure that the file ends with a newline character
+# This is important for compatibility with some tools and systems.
