--- a/.env
+++ b/.env
@@ -15,8 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=31f466dddafeaa0bb49a71a474e3212c
+APP_DEBUG=0
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
