--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ APP_DEBUG=0
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://root:13207@127.0.0.1:5432/admini?serverVersion=17&charset=utf8"
 
- DATABASE_URL="postgresql://root:root@database:5433/admini?serverVersion=15&charset=utf8"  
+ #DATABASE_URL="postgresql://root:root@database:5433/admini?serverVersion=15&charset=utf8"  
 #DATABASE_URL="postgresql://root:Hsey7z8S6FuFujCNr3LqbH2gq4UZhPSm@dpg-cvmenm3e5dus73f2tll0-a/admini_9p29?serverVersion=15&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
